# Foldit

./: .gitignore  database,json  database.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
cloudflare-worker/: README.md  worker.js  wrangler.toml
cloudflare-worker/src/: index.ts
scripts/: build-windows.mjs  publish-windows.mjs  seed-database.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: context_menu.rs  error.rs  lib.rs  main.rs  models.rs  persist.rs  state.rs  system.rs  telemetry.rs  watchdog.rs
src-tauri/src/commands/: compression.rs  library.rs  mod.rs  scanner.rs  settings.rs  system.rs  telemetry.rs
src-tauri/src/compression/: algorithm.rs  exclusions.rs  mod.rs  wof.rs
src-tauri/src/scanner/: mod.rs  presets.rs
src/components/: UpdateBanner.tsx
src/components/layout/: PageHeader.tsx  Sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  progress.tsx  switch.tsx
src/i18n/: en.json  index.ts  it.json
src/lib/: ipc.ts  utils.ts
src/pages/: HomePage.tsx  ScannerPage.tsx  SettingsPage.tsx  TelemetryPage.tsx
src/store/: appStore.ts  settingsStore.ts
src/types/: models.ts
